third_party/move/move-compiler-v2/tests/checking/typing/ignore_inferred_resource.exp

Diagnostics:
error: unable to infer type: `M::S<?1>`
  ┌─ tests/checking/typing/ignore_inferred_resource.move:4:9
  │
4 │         S{};
  │         ^^^
